sandbox/output
Anagram.java:4: error: cannot find symbol
    List<String> generate(String string) {
    ^
  symbol:   class List
  location: class Anagram
Anagram.java:5: error: no suitable constructor found for ArrayList(String)
        return new ArrayList<String>(string);
               ^
    constructor ArrayList.ArrayList(int) is not applicable
      (argument mismatch; String cannot be converted to int)
    constructor ArrayList.ArrayList(Collection<? extends String>) is not applicable
      (argument mismatch; String cannot be converted to Collection<? extends String>)
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
2 errors
